--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Browser DOM Demo</title>
   </head>
   <body>
-    <h2 id="header">Hi there!</h2>
+    <button id="btn-property">Click Me: Property</button>
+    <button id="btn-listener">Click Me: Listener</button>
     <script src="script.js"></script>
   </body>
 </html>
