--- a/index.html
+++ b/index.html
@@ -7,8 +7,17 @@
     <title>Browser DOM Demo</title>
   </head>
   <body>
-    <button id="btn-property">Click Me: Property</button>
-    <button id="btn-listener">Click Me: Listener</button>
+    <div>
+      <h1>Cities</h1>
+      <ul>
+        <li>Chennai</li>
+        <li>Bengaluru</li>
+        <li>Mysuru</li>
+        <li>New Delhi</li>
+        <li>Madurai</li>
+      </ul>
+      <button>Click here!</button>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
