--- a/index.html
+++ b/index.html
@@ -9,14 +9,16 @@
   <body>
     <div>
       <h1>Cities</h1>
-      <ul>
+      <hr />
+      <input type="text" placeholder="enter city name" id="input" />
+      <button id="btn">Add</button>
+      <ul id="cityList">
         <li>Chennai</li>
         <li>Bengaluru</li>
         <li>Mysuru</li>
         <li>New Delhi</li>
         <li>Madurai</li>
       </ul>
-      <button>Click here!</button>
     </div>
     <script src="script.js"></script>
   </body>
