--- a/index.html
+++ b/index.html
@@ -8,17 +8,9 @@
   </head>
   <body>
     <div>
-      <h1>Cities</h1>
+      <h1>Welcome to Learning DOM API with JavaScript</h1>
       <hr />
-      <input type="text" placeholder="enter city name" id="input" />
-      <button id="btn">Add</button>
-      <ul id="cityList">
-        <li>Chennai</li>
-        <li>Bengaluru</li>
-        <li>Mysuru</li>
-        <li>New Delhi</li>
-        <li>Madurai</li>
-      </ul>
+      <button>Take me to Google!</button>
     </div>
     <script src="script.js"></script>
   </body>
