--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
     <div>
       <h1>Welcome to Learning DOM API with JavaScript</h1>
       <hr />
-      <button>Take me to Google!</button>
+      <a href="#home">Home</a>
+      <a href="#contact">Contact</a>
+      <a href="#gallery">Gallery</a>
+      <button id="back">Back</button>
+      <button id="forward">Forward</button>
     </div>
     <script src="script.js"></script>
   </body>
