--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div>
       <h1>Welcome to Learning DOM API with JavaScript</h1>
       <hr />
+      <p id="dump"></p>
     </div>
     <script src="script.js"></script>
   </body>
