--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <h1>Cities</h1>
       <hr />
       <input type="text" placeholder="enter city name" id="input" />
-      <button id="btn">Add</button>
+      <button id="btn">Remove</button>
       <ul id="cityList">
         <li>Chennai</li>
         <li>Bengaluru</li>
