--- a/index.html
+++ b/index.html
@@ -4,13 +4,36 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto&display=swap"
+      rel="stylesheet"
+    />
+
+    <style>
+      body {
+        font-family: 'Roboto', sans-serif;
+      }
+    </style>
     <title>Browser DOM Demo</title>
   </head>
   <body>
-    <div>
+    <div class="container">
       <h1>Welcome to Learning DOM API with JavaScript</h1>
       <hr />
-      <p id="dump"></p>
+      <table class="table table-striped table-bordered">
+        <thead>
+          <th>Id</th>
+          <th>Title</th>
+          <th>Completed?</th>
+        </thead>
+        <tbody></tbody>
+      </table>
     </div>
     <script src="script.js"></script>
   </body>
